--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["jme-taylor <jamiecharlestaylor94@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pandas = "^1.5.1"
+matplotlib = "^3.6.1"
+numpy = "^1.23.4"
+scikit-learn = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
