--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^1.5.1"
 matplotlib = "^3.6.1"
 numpy = "^1.23.4"
 scikit-learn = "^1.1.2"
+xgboost = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
@@ -17,6 +18,7 @@ isort = "^5.10.1"
 flake8 = "^5.0.4"
 jupyterlab = "^3.4.8"
 pytest = "^7.1.3"
+mypy = "^0.982"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
