--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,26 @@
 [tool.poetry]
-name = "rugby_prediction"
+name = "rugby-prediction"
 version = "0.1.0"
 description = ""
 authors = ["jme-taylor <jamiecharlestaylor94@gmail.com>"]
+readme = "README.md"
+packages = [{include = "rugby_prediction"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pandas = "^1.5.1"
-matplotlib = "^3.6.1"
-numpy = "^1.23.4"
-scikit-learn = "^1.1.2"
-xgboost = "^1.7.1"
+pandas = "^1.5.2"
+matplotlib = "^3.6.2"
+numpy = "^1.23.5"
+scikit-learn = "^1.2.0"
 
-[tool.poetry.dev-dependencies]
-black = "^22.10.0"
+
+[tool.poetry.group.dev.dependencies]
 isort = "^5.10.1"
-flake8 = "^5.0.4"
-jupyterlab = "^3.4.8"
-pytest = "^7.1.3"
-mypy = "^0.982"
+flake8 = "^6.0.0"
+mypy = "^0.991"
+black = "22.8.0"
+jupyterlab = "^3.5.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
