--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ flake8 = "^6.0.0"
 mypy = "^0.991"
 black = "22.8.0"
 jupyterlab = "^3.5.1"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
